--- a/environment.yml
+++ b/environment.yml
@@ -8,8 +8,8 @@ channels:
 dependencies:
   - python=3.9
   - numpy
-  - pytorch
-  - pytorch-cuda=11.7
+  - pytorch=1.12.1
+  - cudatoolkit=10.2
   - dgl
   - scikit-learn
 
